force-app/main/default/objects/Account/fields/Account_18_digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_18_digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account 18 digit ID</label>
    <type>Text</type>
</CustomField>