force-app/main/default/objects/Account/fields/Active_And_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Active_And_Enrolled__c</fullName>
    <description>Are dispensers under the outlet active and enrolled or preenrolled</description>
    <label>Active And Enrolled</label>
    <summaryFilterItems>
        <field>FS_Outlet_Dispenser__c.FS_IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>FS_Outlet_Dispenser__c.FS_Status__c</field>
        <operation>contains</operation>
        <value>Enrolled, Wakeup, Winterize, Hibernate</value>
    </summaryFilterItems>
    <summaryForeignKey>FS_Outlet_Dispenser__c.FS_Outlet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>