force-app/main/default/objects/Account/fields/AP_contact_available__c.field-meta.xml
<CustomField>
    <fullName>AP_contact_available__c</fullName>
    <description>Accounts Payable Contact Available?</description>
    <label>Is AP Contact the same as listed on HDQ?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>