force-app/main/default/objects/Account/fields/ARIdentified_100Out__c.field-meta.xml
<CustomField>
    <fullName>ARIdentified_100Out__c</fullName>
    <externalId>true</externalId>
    <label>ARIdentified_100Out</label>
    <length>6</length>
    <type>Text</type>
</CustomField>