force-app/main/default/objects/Account/fields/ARIdentified__c.field-meta.xml
<CustomField>
    <fullName>ARIdentified__c</fullName>
    <externalId>true</externalId>
    <label>ARIdentified</label>
    <length>4</length>
    <type>Text</type>
</CustomField>