force-app/main/default/objects/Account/fields/Autogenerated_SAP__c.field-meta.xml
<CustomField>
    <fullName>Autogenerated_SAP__c</fullName>
    <displayFormat>{0000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Autogenerated SAP</inlineHelpText>
    <label>Autogenerated SAP</label>
    <type>AutoNumber</type>
</CustomField>