force-app/main/default/objects/Account/fields/BillTo__c.field-meta.xml
<CustomField>
    <fullName>BillTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bill-to account Field.</description>
    <inlineHelpText>Bill-to account from SAP</inlineHelpText>
    <label>Bill-To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Bill-To)</relationshipLabel>
    <relationshipName>BillTo</relationshipName>
    <type>Lookup</type>
</CustomField>