force-app/main/default/objects/Account/fields/BOE_Migrated_Outlet__c.field-meta.xml
<CustomField>
    <fullName>BOE_Migrated_Outlet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Migrated Outlet</description>
    <label>Migrated Outlet</label>
    <type>Checkbox</type>
</CustomField>