force-app/main/default/objects/Account/fields/Bottler_BU_Id__c.field-meta.xml
<CustomField>
    <fullName>Bottler_BU_Id__c</fullName>
    <inlineHelpText>Insert bottler account Number.</inlineHelpText>
    <label>Bottler/BU Id</label>
    <length>16</length>
    <type>Text</type>
</CustomField>