force-app/main/default/objects/Account/fields/Bottler_Name__c.field-meta.xml
<CustomField>
    <fullName>Bottler_Name__c</fullName>
    <label>Bottler Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coca-Cola Refreshments Canada</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Enterprises</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Erfrischungsgetraenke AG</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Singapore Beverages</fullName>
            </value>
            <value>
                <fullName>Coca-Cola Amatil Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>