force-app/main/default/objects/Account/fields/Calculated_Customer_Classification_Text__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Customer_Classification_Text__c</fullName>
    <label>Calculated Customer Classification Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>