force-app/main/default/objects/Account/fields/Cartridge_Fee_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Cartridge_Fee_Payment_Method__c</fullName>
    <formula>TEXT(Cokesmart_Payment_Method__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cartridge Fee Payment Method</label>
    <type>Text</type>
</CustomField>