force-app/main/default/objects/Account/fields/CCR_Accounting_Clerk__c.field-meta.xml
<CustomField>
    <fullName>CCR_Accounting_Clerk__c</fullName>
    <label>Accounting Clerk</label>
    <length>50</length>
    <type>Text</type>
</CustomField>