force-app/main/default/objects/Account/fields/CCR_ACN__c.field-meta.xml
<CustomField>
    <fullName>CCR_ACN__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>CCR_ACN__c</inlineHelpText>
    <label>Customer ACN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>