force-app/main/default/objects/Account/fields/CCR_ACN_RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>CCR_ACN_RecordType_Id__c</fullName>
    <description>This field is the combination of ACN and Record type ID and the field will get populated through the interface</description>
    <externalId>true</externalId>
    <label>ACN + RecordType Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>