force-app/main/default/objects/Account/fields/CCR_Address__c.field-meta.xml
<CustomField>
    <fullName>CCR_Address__c</fullName>
    <formula>ShippingStreet &amp;&#39;,&#39;&amp; ShippingCity &amp;&#39;,&#39;&amp; ShippingState &amp; &#39; &#39;&amp; ShippingPostalCode &amp;&#39;,&#39;&amp; ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>