force-app/main/default/objects/Account/fields/CCR_Chain_ACN__c.field-meta.xml
<CustomField>
    <fullName>CCR_Chain_ACN__c</fullName>
    <description>CCR_Chain_ACN</description>
    <label>Chain ACN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>