force-app/main/default/objects/Account/fields/CCR_Formula_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>CCR_Formula_Industry_Code__c</fullName>
    <formula>CCR_Industry_Code__c +&#39;-&#39;+ CCR_Industry_Code_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Code</label>
    <type>Text</type>
</CustomField>