force-app/main/default/objects/Account/fields/CCR_Geography_ID__c.field-meta.xml
<CustomField>
    <fullName>CCR_Geography_ID__c</fullName>
    <label>Geography Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>