force-app/main/default/objects/Account/fields/CCR_HQ_ACN__c.field-meta.xml
<CustomField>
    <fullName>CCR_HQ_ACN__c</fullName>
    <label>HQ ACN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>