force-app/main/default/objects/Account/fields/CCR_Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>CCR_Industry_Code__c</fullName>
    <label>Industry Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>