force-app/main/default/objects/Account/fields/CCR_KO_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>CCR_KO_Record_Type__c</fullName>
    <description>This field holds the SAP record type value that corresponds to the SFDC record type</description>
    <label>KO Record Type</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>