force-app/main/default/objects/Account/fields/CCR_Name_of_Accounting_Clerk__c.field-meta.xml
<CustomField>
    <fullName>CCR_Name_of_Accounting_Clerk__c</fullName>
    <label>Name of Accounting Clerk</label>
    <length>50</length>
    <type>Text</type>
</CustomField>