force-app/main/default/objects/Account/fields/CCRArchived_At__c.field-meta.xml
<CustomField>
    <fullName>CCRArchived_At__c</fullName>
    <description>This will store the date and time of archiving a record.</description>
    <label>Archived At</label>
    <type>DateTime</type>
</CustomField>