force-app/main/default/objects/Account/fields/ChainIsHQ__c.field-meta.xml
<CustomField>
    <fullName>ChainIsHQ__c</fullName>
    <formula>FS_HQ_ACN__c =   FS_ACN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChainIsHQ</label>
    <type>Checkbox</type>
</CustomField>