force-app/main/default/objects/Account/fields/Cokesmart_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Cokesmart_Payment_Method__c</fullName>
    <inlineHelpText>Cartridge Fee Payment Method</inlineHelpText>
    <label>Cartridge Fee Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Invoice_Customer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Bank Draft</fullName>
            </value>
            <value>
                <fullName>Invoice (Payment Terms)</fullName>
            </value>
            <value>
                <fullName>Distributor billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>