force-app/main/default/objects/Account/fields/Confirm_Tax_Exemption_Email_Sender_ID__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Tax_Exemption_Email_Sender_ID__c</fullName>
    <label>Tax Exemption Obtained By?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>