force-app/main/default/objects/Account/fields/Confirm_Tax_Exemption_Obtained_Time__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Tax_Exemption_Obtained_Time__c</fullName>
    <label>Tax Exemption Obtained DateTimestamp</label>
    <type>DateTime</type>
</CustomField>