force-app/main/default/objects/Account/fields/Contact_field_test__c.field-meta.xml
<CustomField>
    <fullName>Contact_field_test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Account Sharing</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Contact field test)</relationshipLabel>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>