force-app/main/default/objects/Account/fields/Corporate_VS_Franchise2__c.field-meta.xml
<CustomField>
    <fullName>Corporate_VS_Franchise2__c</fullName>
    <formula>IF( CONTAINS( FS_ACN__c ,  FS_Chain__r.FS_ACN__c ) , &quot;Corporate&quot;, &quot;Franchise&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate VS Franchise</label>
    <type>Text</type>
</CustomField>