force-app/main/default/objects/Account/fields/CS_Payment_Invoice_Eligible__c.field-meta.xml
<CustomField>
    <fullName>CS_Payment_Invoice_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can Headquarters associated with this chain use Invoice as their CokeSmart Payment method?</inlineHelpText>
    <label>Payment Invoice Eligible</label>
    <type>Checkbox</type>
</CustomField>