force-app/main/default/objects/Account/fields/Customer_ACN_Length__c.field-meta.xml
<CustomField>
    <fullName>Customer_ACN_Length__c</fullName>
    <formula>LEN( CCR_ACN__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer ACN Length</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>