force-app/main/default/objects/Account/fields/Customer_Self_Trained_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Self_Trained_Date__c</fullName>
    <label>Customer Self Trained - Modified Time</label>
    <type>DateTime</type>
</CustomField>