force-app/main/default/objects/Account/fields/DataMigration__c.field-meta.xml
<CustomField>
    <fullName>DataMigration__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>DataMigration</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>