force-app/main/default/objects/Account/fields/Distribution_Sweetener_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Sweetener_Status__c</fullName>
    <formula>TEXT(FS_Distributor__r.FS_Distributor_Sweetener_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Sweetener Status</label>
    <type>Text</type>
</CustomField>