force-app/main/default/objects/Account/fields/Distributor_SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>Distributor_SAP_ID__c</fullName>
    <formula>FS_Distributor__r.FS_SAP_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor SAP ID</label>
    <type>Text</type>
</CustomField>