force-app/main/default/objects/Account/fields/DocumentId__c.field-meta.xml
<CustomField>
    <fullName>DocumentId__c</fullName>
    <description>This field stores the UNID of the Lotus Notes document migrated</description>
    <label>Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>