force-app/main/default/objects/Account/fields/DPSG_Local_Program__c.field-meta.xml
<CustomField>
    <fullName>DPSG_Local_Program__c</fullName>
    <label>DPSG Local Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>