force-app/main/default/objects/Account/fields/First_Install_Date1__c.field-meta.xml
<CustomField>
    <fullName>First_Install_Date1__c</fullName>
    <label>First Install Date at Outlet</label>
    <type>Date</type>
</CustomField>