force-app/main/default/objects/Account/fields/FS_2012_EQ_OW_Vol_Growth__c.field-meta.xml
<CustomField>
    <fullName>FS_2012_EQ_OW_Vol_Growth__c</fullName>
    <label>2012 EQ OW Vol + Growth</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>