force-app/main/default/objects/Account/fields/FS_7000_Series_SP_Trained__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_SP_Trained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7000 Series SP Trained?</label>
    <type>Checkbox</type>
</CustomField>