force-app/main/default/objects/Account/fields/FS_7000_Series_Statics_Brands_Selection__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Statics_Brands_Selection__c</fullName>
    <label>7000 Series Static Brands Selections</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hi-C</fullName>
            </value>
            <value>
                <fullName>POWERade</fullName>
            </value>
            <value>
                <fullName>Raspberry</fullName>
            </value>
            <value>
                <fullName>Fuze</fullName>
            </value>
            <value>
                <fullName>Vitamin Water</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>