force-app/main/default/objects/Account/fields/FS_Accounting_Clerk_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Accounting_Clerk_Code__c</fullName>
    <formula>CCR_Accounting_Clerk__c + &quot;-&quot; + CCR_Name_of_Accounting_Clerk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accounting Clerk Code</label>
    <type>Text</type>
</CustomField>