force-app/main/default/objects/Account/fields/FS_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_ACN__c</fullName>
    <description>SAP Legacy Customer #</description>
    <inlineHelpText>ACN is an auto generated field for International Outlets.</inlineHelpText>
    <label>ACN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>