force-app/main/default/objects/Account/fields/FS_Activation_Lead__c.field-meta.xml
<CustomField>
    <fullName>FS_Activation_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activation Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>