force-app/main/default/objects/Account/fields/FS_Active_SAP_Jet_Indicators__c.field-meta.xml
<CustomField>
    <fullName>FS_Active_SAP_Jet_Indicators__c</fullName>
    <description>Active SAP Jet Indicators</description>
    <label>Active SAP Jet Indicators</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JT</fullName>
            </value>
            <value>
                <fullName>JT Crew</fullName>
            </value>
            <value>
                <fullName>MV</fullName>
            </value>
            <value>
                <fullName>JJ</fullName>
            </value>
            <value>
                <fullName>JM</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>JET5</fullName>
                <isActive>false</isActive>
                <label>JET5</label>
            </value>
            <value>
                <fullName>JET6</fullName>
                <isActive>false</isActive>
                <label>JET6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>