force-app/main/default/objects/Account/fields/FS_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Address__c</fullName>
    <label>Valid Address</label>
    <type>TextArea</type>
</CustomField>