force-app/main/default/objects/Account/fields/FS_Address_Validated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>FS_Address_Validated_Date_Time__c</fullName>
    <formula>NOW()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Validated on</label>
    <type>DateTime</type>
</CustomField>