force-app/main/default/objects/Account/fields/FS_Address_Validated_On__c.field-meta.xml
<CustomField>
    <fullName>FS_Address_Validated_On__c</fullName>
    <description>Used to capture the Date/Time when the address is  validated and saved to the database.</description>
    <label>Address Validated On.</label>
    <type>DateTime</type>
</CustomField>