force-app/main/default/objects/Account/fields/FS_Address_Validation_Error__c.field-meta.xml
<CustomField>
    <fullName>FS_Address_Validation_Error__c</fullName>
    <description>Used to capture the error message after address validation</description>
    <label>Address Validation Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>