force-app/main/default/objects/Account/fields/FS_Admin_User__c.field-meta.xml
<CustomField>
    <fullName>FS_Admin_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Admin User)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>