force-app/main/default/objects/Account/fields/FS_Admin_User_Email__c.field-meta.xml
<CustomField>
    <fullName>FS_Admin_User_Email__c</fullName>
    <label>Admin User Email</label>
    <type>Email</type>
</CustomField>