force-app/main/default/objects/Account/fields/FS_ALL_FS_Equipment_Removed__c.field-meta.xml
<CustomField>
    <fullName>FS_ALL_FS_Equipment_Removed__c</fullName>
    <formula>IF(AND( FS_Total_CS_Units_On_Location__c = 0,  FS_Total_SS_Units_on_Location__c =0, FS_Total_7000_Series_Units_On_Location__c  =0, OR( FS_Total_CS_Units_Installed__c &gt;0, FS_Total_SS_Units_Installed__c &gt;0, FS_Total_7000_Series_Units_Installed__c &gt;0)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Total Units on Location for all Series = 0 or Total Units Installed for all Series &gt; 0 then this box will get checked.</inlineHelpText>
    <label>ALL FS Equipment Removed</label>
    <type>Checkbox</type>
</CustomField>