force-app/main/default/objects/Account/fields/FS_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Approval_Date__c</fullName>
    <label>Approval Date</label>
    <type>Date</type>
</CustomField>