force-app/main/default/objects/Account/fields/FS_Approval_Denial_Comments__c.field-meta.xml
<CustomField>
    <fullName>FS_Approval_Denial_Comments__c</fullName>
    <label>Approval Denial Comments</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>