force-app/main/default/objects/Account/fields/FS_Approved_Bottler_Order_Delivery__c.field-meta.xml
<CustomField>
    <fullName>FS_Approved_Bottler_Order_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is editable only for user Ã¢â‚¬Å“Victor EspositoÃ¢â‚¬ï¿½</description>
    <inlineHelpText>Is it approved for Bottler Ordering ?</inlineHelpText>
    <label>Approved for Bottler Ordering</label>
    <type>Checkbox</type>
</CustomField>