force-app/main/default/objects/Account/fields/FS_Approved_for_Distributor_Ordering__c.field-meta.xml
<CustomField>
    <fullName>FS_Approved_for_Distributor_Ordering__c</fullName>
    <description>Field for allowing Distributor data flow from Request to Final</description>
    <label>Approved for Distributor Setup/Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>