force-app/main/default/objects/Account/fields/FS_Approved_For_Execution_Plan__c.field-meta.xml
<CustomField>
    <fullName>FS_Approved_For_Execution_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved For Execution Plan</label>
    <type>Checkbox</type>
</CustomField>