force-app/main/default/objects/Account/fields/FS_Avg_Number_Dispensers__c.field-meta.xml
<CustomField>
    <fullName>FS_Avg_Number_Dispensers__c</fullName>
    <formula>100/10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg Number Dispensers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>