force-app/main/default/objects/Account/fields/FS_Bargun_Pct__c.field-meta.xml
<CustomField>
    <fullName>FS_Bargun_Pct__c</fullName>
    <formula>1.23</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bargun Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>