force-app/main/default/objects/Account/fields/FS_Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_To_Name__c</fullName>
    <label>Bill To Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>