force-app/main/default/objects/Account/fields/FS_Bottler_ACN__c.field-meta.xml
<CustomField>
    <fullName>FS_Bottler_ACN__c</fullName>
    <label>Bottler ACN</label>
    <length>18</length>
    <type>Text</type>
</CustomField>