force-app/main/default/objects/Account/fields/FS_Bottler_YD_Number__c.field-meta.xml
<CustomField>
    <fullName>FS_Bottler_YD_Number__c</fullName>
    <description>this will be of same type as of SAP id and will be placed under Distributor ACN .</description>
    <label>Bottler YD Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>