force-app/main/default/objects/Account/fields/FS_Bottler_YD_Number_formula__c.field-meta.xml
<CustomField>
    <fullName>FS_Bottler_YD_Number_formula__c</fullName>
    <description>FS Outlet Distributor-&gt; 
Is Distributor Approved for Initial Order Processing</description>
    <formula>FS_Distributor__r.FS_Bottler_YD_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Please add YD Number on the Distributor/Bottler Record</inlineHelpText>
    <label>Bottler YD Number</label>
    <type>Text</type>
</CustomField>