force-app/main/default/objects/Account/fields/FS_Bottlers_Name_text__c.field-meta.xml
<CustomField>
    <fullName>FS_Bottlers_Name_text__c</fullName>
    <description>Field used to capture the Bottler lookup value, used for record sharing..</description>
    <label>Bottlers Name text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>